--- a/.github/workflows/build-image.yaml
+++ b/.github/workflows/build-image.yaml
@@ -1,4 +1,4 @@
-name: Build docker Image
+name: Build Docker Image
 
 on:
   push:
@@ -50,7 +50,7 @@ jobs:
       matrix: ${{ fromJson(needs.detect-changes.outputs.services) }}
     steps:
       - name: Checkout code
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v3
