--- a/release/kubernetes-manifests.yaml
+++ b/release/kubernetes-manifests.yaml
@@ -337,6 +337,10 @@ spec:
           # As part of an optional Google Cloud demo, you can run an optional microservice called the "packaging service".
           # - name: PACKAGING_SERVICE_URL
           #   value: "" # This value would look like "http://123.123.123"
+          - name: ELASTIC_APM_SERVICE_NAME
+            value: "frontend"
+          - name: ELASTIC_APM_SERVER_URL
+            value: "https://localhost:8200"
           resources:
             requests:
               cpu: 100m
